# data-platform-app

./: .gitignore  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
api/: main.py  pyproject.toml
api/alembic/: README  env.py
api/alembic/versions/: dedaf4f384ba_new.py
api/app/config/: db.py  settings.py
api/app/models/: __init__.py  auth.py  catalog.py  connections.py  metadata.py  resources.py  workspace.py
api/app/router/: auth.py  metadata.py  resources.py  workspace.py
api/app/services/: auth.py  connections.py  metadata.py  resources.py  tabledata.py  workspace.py
api/app/utils/: schema.py  sercret.py
api/docs/: 开发计划.md  数据库版本管理.md
api/tests/: conftest.py  readme.md  test_auth.py  test_metadata.py  test_secret.py  test_workspace.py
src/: App.tsx  globals.css  main.tsx  routes.tsx
src/components/: theme-provider.tsx  theme-toggle-simple.tsx
src/components/auth/: login-form.tsx  register-form.tsx  user-profile.tsx
src/components/dashboard/: app-layout.tsx  app-sidebar.tsx  chart-area-interactive.tsx  dashboard-layout.tsx  data-table.tsx  nav-main.tsx  site-header.tsx
src/components/resources/: compute-node.tsx  connection-manager.tsx  connections.tsx  meta-data-table.tsx  resource-table.tsx
src/components/ui/: button.tsx  input.tsx  sidebar.tsx  table.tsx
src/pages/: 404.tsx  about.tsx  index.tsx
src/pages/analysis/: data.json  index.tsx
src/pages/dashboard/: analytics.tsx  index.tsx  lifecycle.tsx  main.tsx  monoitor.tsx  projects.tsx  resources.tsx  settings.tsx  team.tsx
src/utils/: data.ts
(+5 files in other folders)
