[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0.0",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.10.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "alembic>=1.16.4",
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.1.0",
    "aiomysql>=0.2.0",
    "pymongo>=4.14.1",
    "motor>=3.7.1",
]
